Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5523

Server crashes on DROP USER <rolename>

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.7
    • 10.0.8
    • None
    • None

    Description

      The bug first mentioned by Peter Gulutzan in his blog

      create role r1;
      drop user r1;

      #3  <signal handler called>
      #4  0x00000000005e5d54 in st_lex_user::is_role (this=0x7f191144d120) at 10.0/sql/structs.h:193
      #5  0x00000000005dcb97 in append_user (str=0x7f193e4ce840, user=0x7f191144d120) at 10.0/sql/sql_acl.cc:9061
      #6  0x00000000005dd3e9 in mysql_drop_user (thd=0x7f19213f5070, list=..., handle_as_role=false) at 10.0/sql/sql_acl.cc:9246
      #7  0x0000000000652a92 in mysql_execute_command (thd=0x7f19213f5070) at 10.0/sql/sql_parse.cc:4050
      #8  0x0000000000658f26 in mysql_parse (thd=0x7f19213f5070, rawbuf=0x7f191144d088 "drop user r1", length=12, parser_state=0x7f193e4cf4b0) at 10.0/sql/sql_parse.cc:6394
      #9  0x000000000064b8a8 in dispatch_command (command=COM_QUERY, thd=0x7f19213f5070, packet=0x7f1921447071 "drop user r1", packet_length=12) at 10.0/sql/sql_parse.cc:1296
      #10 0x000000000064abf6 in do_command (thd=0x7f19213f5070) at 10.0/sql/sql_parse.cc:993
      #11 0x000000000076b719 in do_handle_one_connection (thd_arg=0x7f19213f5070) at 10.0/sql/sql_connect.cc:1379
      #12 0x000000000076b46c in handle_one_connection (arg=0x7f19213f5070) at 10.0/sql/sql_connect.cc:1293
      #13 0x0000000000a121af in pfs_spawn_thread (arg=0x7f1921739030) at 10.0/storage/perfschema/pfs.cc:1853
      #14 0x00007f193d8b8e9a in start_thread (arg=0x7f193e4d0700) at pthread_create.c:308
      #15 0x00007f193c7ac3fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      revision-id: elenst@opensuse.home-20131228163657-kk32bmtqogy61mwm
      revno: 3962
      branch-nick: 10.0

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.