MDEV-5523 Server crashes on DROP USER <rolename>

use 'user_name' for the error message (fixed, after get_current_user()),
not the original tmp_user_name, as it comes from the parser (host == NULL).